--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   postgrest: ^2.6.0
   realtime_client: ^2.7.0
   sign_in_with_apple: ^7.0.1
+  flutter_riverpod: ^2.6.1
+  go_router: ^14.6.2
 
 dev_dependencies:
   flutter_test:
